--- a/styles.css
+++ b/styles.css
@@ -54,22 +54,29 @@ body {
 
 /* MAIN */
 
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 /* NAVBAR */
+
+.navbar__container {
+  background-color: #1f2937;
+  padding: 10px 200px;
+  width: 100%;
+}
 
 .navbar {
   display: flex;
   justify-content: end;
-  background-color: #1f2937;
-  padding: 10px 200px;
+  max-width: 900px;
   font-size: 18px;
-}
-
-.navbar__flex {
-  max-width: 950px;
+  margin: 0 auto;
 }
 
 .navbar a {
   color: #e5e7eb;
+  padding-left: 20px;
 }
 
 .navbar__logo {
@@ -81,11 +88,17 @@ body {
 
 /* HEADER */
 
-.header {
+.header__container {
   background-color: #1f2937;
-  padding: 50px 200px;
+  padding: 90px 200px;
+  width: 100%;
+}
+
+.header {
   display: flex;
   gap: 40px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .header__hero {
@@ -102,6 +115,18 @@ body {
 .header__text {
   font-size: 18px;
   color: #e5e7eb;
+  padding-bottom: 10px;
+}
+
+.header__button,
+.signup__button {
+  max-width: 100px;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 /* CARDS */
@@ -158,6 +183,14 @@ body {
   margin: 0 auto;
 }
 
+.quote__cite {
+  margin: 0 auto;
+  text-align: end;
+  max-width: 800px;
+  font-weight: bold;
+  color: #1f2937;
+}
+
 /* SIGNUP */
 
 .signup {
@@ -172,6 +205,14 @@ body {
   display: flex;
   justify-content: space-between;
   color: #f9faf8;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.signup__button {
+  border: 2px solid #f9faf8;
+  width: 100px;
+  padding: 0;
 }
 
 /* FOOTER */
@@ -180,4 +221,5 @@ body {
   background-color: #1f2937;
   text-align: center;
   color: #f9faf8;
+  padding: 30px;
 }
